@@ -1,5 +1,7 @@
 2006-12-04  Per Bothner  <per@bothner.com>
 
+	* RunXQTS.java (<init>): Add preprocessing for expected failures.
+
 	* Makefile.am (EXTRA_DIST): Add a missing file.
 
 2006-12-01  Per Bothner  <per@bothner.com>
